--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-polyfill": "^6.26.0",
     "file-saver": "^2.0.0",
     "register-service-worker": "^1.5.2",
+    "tiptap": "^1.14.0",
+    "tiptap-extensions": "^1.14.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.5.0",
     "vue-resource": "^1.5.1",
