--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "file-saver": "^2.0.0",
     "register-service-worker": "^1.6.2",
-    "tiptap": "^1.26.4",
-    "tiptap-extensions": "^1.28.4",
+    "tiptap-vuetify": "^2.6.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.15.0",
     "vue-resource": "^1.5.1",
